<resources>
    <string name="app_name">Todo</string>
    <string name="tasks">Tasks</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="date">Datum</string>
    <string name="time">Zeit</string>
    <string name="priority">Priorität</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="done">Erledigt</string>
    <string name="favorite">Favorit</string>
    <string name="arrow">Pfeil</string>
    <string name="add">Hinzufügen</string>
    <string name="contact">Kontakt</string>
</resources>